--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^14.1.2",
+    "@contentful/rich-text-react-renderer": "^14.1.2",
+    "contentful": "^8.2.1",
     "gatsby": "^3.1.2",
+    "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sass": "^4.1.0",
     "gatsby-plugin-sharp": "^3.2.0",
     "gatsby-remark-images": "^4.2.0",
     "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-source-contentful": "^5.2.0",
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-transformer-remark": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "sass": "^1.32.8"
   },
   "devDependencies": {
